# excalibur

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: patch-excalidraw.mjs
src/: App.css  App.tsx  AttachmentPreview.tsx  attachments.ts  collaboration.ts  main.tsx  nativePreviews.ts  storage.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: collaboration.rs  lib.rs  main.rs
